# esp-osdp

./: .gitmodules  README.md  sdkconfig
components/osdp/: CMakeLists.txt  README.md  osdp_config.h  osdp_export.h
main/: hello_world_main.c
